--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -10,38 +10,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3b5f96fb",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#abrir datasets\n",
+    "# Abrir datasets\n",
     "import pandas as pd\n",
     "\n",
-    "df_white = pd.read_csv(\"data/winequality-white.csv\")\n",
-    "df_red = pd.read_csv(\"data/winequality-white.csv\")"
+    "df_white = pd.read_csv(\"data/winequality-white.csv\", sep=';')\n",
+    "\n",
+    "# Eliminación de duplicados, ignorado quality\n",
+    "cols = df_white.columns.drop('quality')\n",
+    "df_white = df_white.drop_duplicates(subset=cols)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7aa0834f",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
