proba de commit

--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -5,7 +5,7 @@
    "id": "a5505af4",
    "metadata": {},
    "source": [
-    "# PRACICA 1"
+    "# PRACTICA 1"
    ]
   },
   {
@@ -27,8 +27,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7aa0834f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lucia intenta ter unha celda pa traballar e facer un maldito commit\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"lucia intenta ter unha celda pa traballar e facer un maldito commit\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f3f78ba",
    "metadata": {},
    "outputs": [],
    "source": []
