--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -49,7 +49,17 @@
    "id": "9f3f78ba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def clasificar_vino(valor): \n",
+    "    if valor < 7: \n",
+    "        return \"baja calidad\" \n",
+    "    elif valor >= 7: \n",
+    "        return \"alta calidad\" \n",
+    "    df['calidad'] = df['quality'].apply(clasificar_vino) \n",
+    "    df = df.drop(columns=['quality']) \n",
+    "    # Guardar el CSV mod \n",
+    "    df.to_csv(\"data\\winequality-white-procesado.csv\", index=False, sep=\";\")"
+   ]
   }
  ],
  "metadata": {
