--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "3b5f96fb",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "7aa0834f",
    "metadata": {},
    "outputs": [
@@ -48,18 +48,38 @@
    "execution_count": null,
    "id": "9f3f78ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:10: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "<>:10: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_24564\\3509338710.py:10: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "  df.to_csv(\"data\\winequality-white-procesado.csv\", index=False, sep=\";\")\n"
+     ]
+    }
+   ],
    "source": [
+    "df_white = pd.read_csv(\"data/winequality-white.csv\", sep=';')\n",
     "def clasificar_vino(valor): \n",
     "    if valor < 7: \n",
     "        return \"baja calidad\" \n",
     "    elif valor >= 7: \n",
     "        return \"alta calidad\" \n",
-    "    df['calidad'] = df['quality'].apply(clasificar_vino) \n",
-    "    df = df.drop(columns=['quality']) \n",
-    "    # Guardar el CSV mod \n",
-    "    df.to_csv(\"data\\winequality-white-procesado.csv\", index=False, sep=\";\")"
+    "df['calidad'] = df['quality'].apply(clasificar_vino) \n",
+    "df = df.drop(columns=['quality']) \n",
+    "# Guardar el CSV mod \n",
+    "df.to_csv(\"data\\winequality-white-procesado.csv\", index=False, sep=\";\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "219ae80f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
