--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -5,12 +5,36 @@
    "id": "a5505af4",
    "metadata": {},
    "source": [
-    "# PRACTICA 1"
+    "# PRÁCTICA 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1f4a760",
+   "metadata": {},
+   "source": [
+    "Lucía Pérez González, Manuel Ramallo Blanco, Alexandre Lorenzo Martínez"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00b54141",
+   "metadata": {},
+   "source": [
+    "## 1 - Preprocesado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccbe9e71",
+   "metadata": {},
+   "source": [
+    "### 1.1 - Eliminación de duplicados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "3b5f96fb",
    "metadata": {},
    "outputs": [],
@@ -18,68 +42,186 @@
     "# Abrir datasets\n",
     "import pandas as pd\n",
     "\n",
-    "df_white = pd.read_csv(\"data/winequality-white.csv\", sep=';')\n",
+    "df_vino = pd.read_csv(\"data/train.csv\")\n",
     "\n",
     "# Eliminación de duplicados, ignorado quality\n",
-    "cols = df_white.columns.drop('quality')\n",
-    "df_white = df_white.drop_duplicates(subset=cols)"
+    "cols = df_vino.columns.drop('quality')\n",
+    "df_vino = df_vino.drop_duplicates(subset=cols)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "id": "7aa0834f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lucia intenta ter unha celda pa traballar e facer un maldito commit\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"lucia intenta ter unha celda pa traballar e facer un maldito commit\")"
+    "### 1.2 - Binarización de la calidad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9f3f78ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:10: SyntaxWarning: invalid escape sequence '\\w'\n",
-      "<>:10: SyntaxWarning: invalid escape sequence '\\w'\n",
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_24564\\3509338710.py:10: SyntaxWarning: invalid escape sequence '\\w'\n",
-      "  df.to_csv(\"data\\winequality-white-procesado.csv\", index=False, sep=\";\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_white = pd.read_csv(\"data/winequality-white.csv\", sep=';')\n",
     "def clasificar_vino(valor): \n",
     "    if valor < 7: \n",
     "        return \"baja calidad\" \n",
     "    elif valor >= 7: \n",
     "        return \"alta calidad\" \n",
-    "df['calidad'] = df['quality'].apply(clasificar_vino) \n",
-    "df = df.drop(columns=['quality']) \n",
-    "# Guardar el CSV mod \n",
-    "df.to_csv(\"data\\winequality-white-procesado.csv\", index=False, sep=\";\")"
+    "df_vino['calidad'] = df_vino['quality'].apply(clasificar_vino) \n",
+    "df_vino = df_vino.drop(columns=['quality'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "219ae80f",
+   "metadata": {},
+   "source": [
+    "### 1.3 - Gestión de valores atípicos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d170e801",
+   "metadata": {},
+   "source": [
+    "Eliminamos aquellas filas que no tienen valores para 4 columnas o más:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "219ae80f",
+   "execution_count": 4,
+   "id": "67291195",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_vino = df_vino[df_vino.isnull().sum(axis=1) < 4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45e6e6d3",
+   "metadata": {},
+   "source": [
+    "Aquellas filas que tengan 4 o más valores atípicos también serán descartadas. Para contar cuántos datos atípicos hay por fila, añadimos una nueva columna."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "db58dbc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_vino['num atipicos'] = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99a71205",
+   "metadata": {},
+   "source": [
+    "#### 1.3.1 - Fixed acidity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16ce5fe6",
+   "metadata": {},
+   "source": [
+    "#### 1.3.2 - Volatile acidity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e7f7070",
+   "metadata": {},
+   "source": [
+    "#### 1.3.3 - Citric acid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7839ca9",
+   "metadata": {},
+   "source": [
+    "#### 1.3.4 - Residual sugar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd214439",
+   "metadata": {},
+   "source": [
+    "#### 1.3.5 - Chlorides"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d38371b1",
+   "metadata": {},
+   "source": [
+    "#### 1.3.6 - Free sulfur dioxide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b26dfb5",
+   "metadata": {},
+   "source": [
+    "#### 1.3.7 - Total sulfur dioxide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f958e81",
+   "metadata": {},
+   "source": [
+    "#### 1.3.8 - Density"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eabdd8b6",
+   "metadata": {},
+   "source": [
+    "#### 1.3.8 - pH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c910adb",
+   "metadata": {},
+   "source": [
+    "#### 1.3.9 - Sulphates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13e9d175",
+   "metadata": {},
+   "source": [
+    "#### 1.3.10 - Alcohol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98c7c55f",
+   "metadata": {},
+   "source": [
+    "#### 1.3.11 - Eliminación de filas con muchos datos atípicos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fd9c7a0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_vino = df_vino[df_vino['num atipicos'] < 4]"
+   ]
   }
  ],
  "metadata": {
