--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "3b5f96fb",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "9f3f78ba",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "67291195",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "db58dbc3",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "id": "35d8d492",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Columnas numéricas de características:\n",
+      "['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar', 'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density', 'pH', 'sulphates', 'alcohol']\n",
+      "\n",
+      "Número de filas con 0, 1, 2, ... atípicos (IQR + negativos):\n",
+      "num atipicos\n",
+      "0    3188\n",
+      "1     493\n",
+      "2      43\n",
+      "3       2\n",
+      "4       1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lista de columnas numéricas (todas menos 'calidad' y 'num atipicos')\n",
+    "cols_diana = [c for c in df_vino.columns if c not in [\"calidad\", \"num atipicos\"]]\n",
+    "\n",
+    "print(\"\\nColumnas numéricas de características:\")\n",
+    "print(cols_diana)\n",
+    "\n",
+    "# Deteccion de valores atipicos\n",
+    "\n",
+    "# Diccionario para guardar atípicos: fila -> columnas\n",
+    "atipicos_por_fila = {}\n",
+    "\n",
+    "for col in cols_diana:\n",
+    "\n",
+    "    # Calculamos IQR y límites\n",
+    "    Q1 = df_vino[col].quantile(0.25)\n",
+    "    Q3 = df_vino[col].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower = Q1 - 3 * IQR\n",
+    "    upper = Q3 + 3 * IQR\n",
+    "    \n",
+    "    # Declaramos condición de atípico y registramos sus posiciones\n",
+    "    cond_iqr = (df_vino[col] < lower) | (df_vino[col] > upper)    #OLLO! Nico recomendara ver os casos 1 a 1 \n",
+    "    cond_neg = df_vino[col] < 0\n",
+    "    cond_atipico = cond_iqr | cond_neg\n",
+    "\n",
+    "    for idx in df_vino[cond_atipico].index:\n",
+    "        if idx not in atipicos_por_fila:\n",
+    "            atipicos_por_fila[idx] = []\n",
+    "        atipicos_por_fila[idx].append(col)\n",
+    "\n",
+    "    # Incrementamos el contador de atípicos por fila\n",
+    "    df_vino[\"num atipicos\"] += cond_atipico.astype(int)\n",
+    "\n",
+    "print(\"\\nNúmero de filas con 0, 1, 2, ... atípicos (IQR + negativos):\")\n",
+    "print(df_vino[\"num atipicos\"].value_counts().sort_index())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "fd9c7a0d",
    "metadata": {},
    "outputs": [],
@@ -240,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
