--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "id": "3b5f96fb",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 79,
    "id": "9f3f78ba",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "id": "67291195",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "id": "db58dbc3",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "35d8d492",
    "metadata": {},
    "outputs": [
@@ -224,8 +224,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Columnas numéricas de características:\n",
-      "['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar', 'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density', 'pH', 'sulphates', 'alcohol']\n"
+      "Número de filas con 0, 1, 2, ... atípicos (IQR + negativos):\n",
+      "num atipicos\n",
+      "0    1829\n",
+      "1    1142\n",
+      "2     516\n",
+      "3     184\n",
+      "4      50\n",
+      "5       8\n",
+      "6       3\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -238,19 +246,19 @@
     "# Diccionario para guardar atípicos: fila -> columnas\n",
     "#atipicos_por_fila = {}\n",
     "\n",
-    "def detectar_atipicos(df, col):\n",
+    "def detectar_atipicos(df, cols_diana):\n",
     "    for col in cols_diana:\n",
     "\n",
     "        # Calculamos IQR y límites\n",
-    "        Q1 = df_vino[col].quantile(0.25)\n",
-    "        Q3 = df_vino[col].quantile(0.75)\n",
+    "        Q1 = df[col].quantile(0.25)\n",
+    "        Q3 = df[col].quantile(0.75)\n",
     "        IQR = Q3 - Q1\n",
     "        lower = Q1 - 6 * IQR\n",
     "        upper = Q3 + 6 * IQR\n",
     "        \n",
     "        # Declaramos condición de atípico y registramos sus posiciones\n",
-    "        cond_iqr = (df_vino[col] < lower) | (df_vino[col] > upper)    #OLLO! Nico recomendara ver os casos 1 a 1 \n",
-    "        cond_neg = df_vino[col] < 0\n",
+    "        cond_iqr = (df[col] < lower) | (df[col] > upper)    #OLLO! Nico recomendara ver os casos 1 a 1 \n",
+    "        cond_neg = df[col] < 0\n",
     "        cond_atipico = cond_iqr | cond_neg\n",
     "\n",
     "        #for idx in df_vino[cond_atipico].index:\n",
@@ -259,31 +267,64 @@
     "        #    atipicos_por_fila[idx].append(col)\n",
     "\n",
     "        # Incrementamos el contador de atípicos por fila\n",
-    "        df_vino[\"num atipicos\"] += cond_atipico.astype(int)\n",
-    "        df_vino.loc[cond_atipico, col] = pd.NA\n",
+    "        df[\"num atipicos\"] += cond_atipico.astype(int)\n",
+    "        df.loc[cond_atipico, col] = pd.NA\n",
     "\n",
-    "        df_vino[\"num atipicos\"] += df_vino[col].isna().astype(int)\n",
+    "        df[\"num atipicos\"] += df[col].isna().astype(int)\n",
     "\n",
     "    print(\"\\nNúmero de filas con 0, 1, 2, ... atípicos (IQR + negativos):\")\n",
-    "    print(df_vino[\"num atipicos\"].value_counts().sort_index())\n",
+    "    print(df[\"num atipicos\"].value_counts().sort_index())\n",
     "    \n",
     "\n",
-    "\n"
+    "detectar_atipicos(df_vino, cols_diana)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "id": "c12af96b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columna 'fixed acidity' tiene 6.22% valores faltantes.\n",
+      "Columna 'volatile acidity' tiene 5.81% valores faltantes.\n",
+      "Columna 'citric acid' tiene 6.51% valores faltantes.\n",
+      "Columna 'residual sugar' tiene 5.73% valores faltantes.\n",
+      "Columna 'chlorides' tiene 7.29% valores faltantes.\n",
+      "Columna 'free sulfur dioxide' tiene 5.57% valores faltantes.\n",
+      "Columna 'total sulfur dioxide' tiene 6.24% valores faltantes.\n",
+      "Columna 'density' tiene 6.08% valores faltantes.\n",
+      "Columna 'pH' tiene 6.03% valores faltantes.\n",
+      "Columna 'sulphates' tiene 6.70% valores faltantes.\n",
+      "Columna 'alcohol' tiene 5.71% valores faltantes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Analisis de valores faltantes por columna\n",
+    "\n",
+    "for col in cols_diana:\n",
+    "    # Contamos el numero de valores faltantes (NA) en la columna(\n",
+    "    print(f\"Columna '{col}' tiene {(df_vino[col].isna().sum()/len(df_vino)*100):.2f}% valores faltantes.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "27ab1a49",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "#df_vino = df_vino[df_vino.isnull().sum(axis=1) < 4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 85,
    "id": "fd9c7a0d",
    "metadata": {},
    "outputs": [],
