Unión de códigos

--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -296,6 +296,38 @@
    "source": [
     "#df_vino = df_vino[df_vino['num atipicos'] < 4]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7f777898",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columna 'fixed acidity' tiene 6.22% valores faltantes.\n",
+      "Columna 'volatile acidity' tiene 5.81% valores faltantes.\n",
+      "Columna 'citric acid' tiene 6.51% valores faltantes.\n",
+      "Columna 'residual sugar' tiene 5.73% valores faltantes.\n",
+      "Columna 'chlorides' tiene 7.29% valores faltantes.\n",
+      "Columna 'free sulfur dioxide' tiene 5.57% valores faltantes.\n",
+      "Columna 'total sulfur dioxide' tiene 6.24% valores faltantes.\n",
+      "Columna 'density' tiene 6.08% valores faltantes.\n",
+      "Columna 'pH' tiene 6.03% valores faltantes.\n",
+      "Columna 'sulphates' tiene 6.70% valores faltantes.\n",
+      "Columna 'alcohol' tiene 5.71% valores faltantes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Analisis de valores faltantes por columna\n",
+    "\n",
+    "for col in cols_diana:\n",
+    "    # Contamos el numero de valores faltantes (NA) en la columna(\n",
+    "    print(f\"Columna '{col}' tiene {(df_vino[col].isna().sum()/len(df_vino)*100):.2f}% valores faltantes.\")"
+   ]
   }
  ],
  "metadata": {
