--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "id": "3b5f96fb",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "id": "9f3f78ba",
    "metadata": {},
    "outputs": [],
@@ -90,16 +90,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "67291195",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_vino = df_vino[df_vino.isnull().sum(axis=1) < 4]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "45e6e6d3",
    "metadata": {},
@@ -109,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 22,
    "id": "db58dbc3",
    "metadata": {},
    "outputs": [],
@@ -215,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "id": "35d8d492",
    "metadata": {},
    "outputs": [
@@ -271,35 +261,16 @@
     "        df.loc[cond_atipico, col] = pd.NA\n",
     "\n",
     "        df[\"num atipicos\"] += df[col].isna().astype(int)\n",
+    "    return df\n",
     "\n",
-    "detectar_atipicos(df_vino, cols_diana)\n",
+    "df= detectar_atipicos(df_vino, cols_diana)\n",
     "print(\"\\nNúmero de filas con 0, 1, 2, ... atípicos (IQR + negativos):\")\n",
     "print(df_vino[\"num atipicos\"].value_counts().sort_index())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "27ab1a49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_vino = df_vino[df_vino.isnull().sum(axis=1) < 4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "fd9c7a0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_vino = df_vino[df_vino['num atipicos'] < 4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "7f777898",
    "metadata": {},
    "outputs": [
@@ -328,6 +299,36 @@
     "    # Contamos el numero de valores faltantes (NA) en la columna(\n",
     "    print(f\"Columna '{col}' tiene {(df_vino[col].isna().sum()/len(df_vino)*100):.2f}% valores faltantes.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02d19cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eliminar_o_imputacion(df, max_atipicos=3):\n",
+    "    # Eliminar filas con 4 o más valores atípicos   \n",
+    "    df = df[df['num atipicos'] < max_atipicos]\n",
+    "\n",
+    "    # Imputacion de valores: mediana para cada nulo de cada columna\n",
+    "    cols_diana = [c for c in df.columns if c not in [\"calidad\", \"num atipicos\"]]\n",
+    "    for col in cols_diana:\n",
+    "        mediana = df[col].median()\n",
+    "        df[col] = df[col].fillna(mediana)\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "df_vino = eliminar_o_imputacion(df_vino)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be145b9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -346,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
