con mediana fora

--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "3b5f96fb",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "9f3f78ba",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "db58dbc3",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "id": "35d8d492",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "id": "7f777898",
    "metadata": {},
    "outputs": [
@@ -302,14 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "02d19cb0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def eliminar_o_imputacion(df, max_atipicos=3):\n",
     "    # Eliminar filas con 4 o más valores atípicos   \n",
-    "    df = df[df['num atipicos'] < max_atipicos]\n",
+    "    df = df[df['num atipicos'] < max_atipicos].copy()\n",
     "\n",
     "    # Imputacion de valores: mediana para cada nulo de cada columna\n",
     "    cols_diana = [c for c in df.columns if c not in [\"calidad\", \"num atipicos\"]]\n",
@@ -317,9 +317,9 @@
     "        mediana = df[col].median()\n",
     "        df[col] = df[col].fillna(mediana)\n",
     "\n",
-    "    return df\n",
+    "    return df,mediana\n",
     "\n",
-    "df_vino = eliminar_o_imputacion(df_vino)"
+    "df_vino,mediana = eliminar_o_imputacion(df_vino)\n"
    ]
   },
   {
