--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "id": "3b5f96fb",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "9f3f78ba",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "id": "db58dbc3",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "id": "35d8d492",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "id": "7f777898",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "id": "02d19cb0",
    "metadata": {},
    "outputs": [],
@@ -310,16 +310,18 @@
     "def eliminar_o_imputacion(df, max_atipicos=3):\n",
     "    # Eliminar filas con 4 o más valores atípicos   \n",
     "    df = df[df['num atipicos'] < max_atipicos].copy()\n",
+    "    medianas= []\n",
     "\n",
     "    # Imputacion de valores: mediana para cada nulo de cada columna\n",
     "    cols_diana = [c for c in df.columns if c not in [\"calidad\", \"num atipicos\"]]\n",
     "    for col in cols_diana:\n",
-    "        mediana = df[col].median()\n",
+    "        med = df[col].median()\n",
+    "        medianas.append(med)\n",
     "        df[col] = df[col].fillna(mediana)\n",
     "\n",
     "    return df,mediana\n",
     "\n",
-    "df_vino,mediana = eliminar_o_imputacion(df_vino)\n"
+    "df_vino,medianas = eliminar_o_imputacion(df_vino)\n"
    ]
   },
   {
