--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "02d19cb0",
    "metadata": {},
    "outputs": [],
@@ -317,9 +317,9 @@
     "    for col in cols_diana:\n",
     "        med = df[col].median()\n",
     "        medianas.append(med)\n",
-    "        df[col] = df[col].fillna(mediana)\n",
+    "        df[col] = df[col].fillna(medianas)\n",
     "\n",
-    "    return df,mediana\n",
+    "    return df,medianas\n",
     "\n",
     "df_vino,medianas = eliminar_o_imputacion(df_vino)\n"
    ]
