--- a/p01/script_manu.ipynb
+++ b/p01/script_manu.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "3b5f96fb",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "9f3f78ba",
    "metadata": {},
    "outputs": [],
@@ -90,6 +90,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "67291195",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_vino = df_vino[df_vino.isnull().sum(axis=1) < 4]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "45e6e6d3",
    "metadata": {},
@@ -99,57 +109,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35d8d492",
+   "execution_count": 7,
+   "id": "db58dbc3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_20336\\3018258264.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "Número de filas con 0, 1, 2, ... atípicos (IQR + negativos):\n",
-      "num atipicos\n",
-      "0    1829\n",
-      "1    1142\n",
-      "2     516\n",
-      "3     184\n",
-      "4      50\n",
-      "5       8\n",
-      "6       3\n",
-      "Name: count, dtype: int64\n"
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_vino['num atipicos'] = 0\n"
      ]
     }
    ],
    "source": [
-    "# Lista de columnas numéricas (todas menos 'calidad' y 'num atipicos')\n",
-    "\n",
-    "\n",
-    "# Deteccion de valores atipicos\n",
-    "\n",
-    "\n",
-    "def detectar_atipicos(df_train, df_val, cols_diana):\n",
-    "    for col in cols_diana:\n",
-    "\n",
-    "        # Calculamos IQR y límites\n",
-    "        Q1 = df_train[col].quantile(0.25)\n",
-    "        Q3 = df_train[col].quantile(0.75)\n",
-    "        IQR = Q3 - Q1\n",
-    "        lower = Q1 - 6 * IQR\n",
-    "        upper = Q3 + 6 * IQR\n",
-    "        \n",
-    "        # Declaramos condición de atípico y registramos sus posiciones\n",
-    "        cond_iqr = (df_train[col] < lower) | (df_train[col] > upper)    #OLLO! Nico recomendara ver os casos 1 a 1 \n",
-    "        cond_neg = df_train[col] < 0\n",
-    "        cond_atipico = cond_iqr | cond_neg\n",
-    "\n",
-    "\n",
-    "        # Incrementamos el contador de atípicos por fila en ambos conjuntos\n",
-    "        df_train.loc[cond_atipico, col] = pd.NA\n",
-    "        df_val.loc[cond_atipico, col] = pd.NA\n",
-    "\n",
-    "\n",
-    "    return df_train, df_val"
+    "df_vino['num atipicos'] = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99a71205",
+   "metadata": {},
+   "source": [
+    "#### 1.3.1 - Fixed acidity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16ce5fe6",
+   "metadata": {},
+   "source": [
+    "#### 1.3.2 - Volatile acidity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e7f7070",
+   "metadata": {},
+   "source": [
+    "#### 1.3.3 - Citric acid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7839ca9",
+   "metadata": {},
+   "source": [
+    "#### 1.3.4 - Residual sugar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd214439",
+   "metadata": {},
+   "source": [
+    "#### 1.3.5 - Chlorides"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d38371b1",
+   "metadata": {},
+   "source": [
+    "#### 1.3.6 - Free sulfur dioxide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b26dfb5",
+   "metadata": {},
+   "source": [
+    "#### 1.3.7 - Total sulfur dioxide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f958e81",
+   "metadata": {},
+   "source": [
+    "#### 1.3.8 - Density"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eabdd8b6",
+   "metadata": {},
+   "source": [
+    "#### 1.3.8 - pH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c910adb",
+   "metadata": {},
+   "source": [
+    "#### 1.3.9 - Sulphates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13e9d175",
+   "metadata": {},
+   "source": [
+    "#### 1.3.10 - Alcohol"
    ]
   },
   {
@@ -157,77 +223,23 @@
    "id": "98c7c55f",
    "metadata": {},
    "source": [
-    "#### 1.3.11 - Tratamiento de datos atípicos"
+    "#### 1.3.11 - Eliminación de filas con muchos datos atípicos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7f777898",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Columna 'fixed acidity' tiene 6.22% valores faltantes.\n",
-      "Columna 'volatile acidity' tiene 5.81% valores faltantes.\n",
-      "Columna 'citric acid' tiene 6.51% valores faltantes.\n",
-      "Columna 'residual sugar' tiene 5.73% valores faltantes.\n",
-      "Columna 'chlorides' tiene 7.29% valores faltantes.\n",
-      "Columna 'free sulfur dioxide' tiene 5.57% valores faltantes.\n",
-      "Columna 'total sulfur dioxide' tiene 6.24% valores faltantes.\n",
-      "Columna 'density' tiene 6.08% valores faltantes.\n",
-      "Columna 'pH' tiene 6.03% valores faltantes.\n",
-      "Columna 'sulphates' tiene 6.70% valores faltantes.\n",
-      "Columna 'alcohol' tiene 5.71% valores faltantes.\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02d19cb0",
+   "execution_count": 8,
+   "id": "fd9c7a0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eliminar_o_imputacion(df_train, df_val, cols_diana, max_atipicos=3, umbral_col=20,  target='calidad'):\n",
-    "    # Eliminar filas con 4 o más valores atípicos\n",
-    "    # Contamos el número de valores atípicos por fila (NA) y filtramos \n",
-    "    df_train = df_train[df_train.isnull().sum(axis=1) < max_atipicos]\n",
-    "    df_val = df_val[df_val.isnull().sum(axis=1) < max_atipicos]\n",
-    "\n",
-    "    # Analisis de valores faltantes por columna\n",
-    "    for col in cols_diana:\n",
-    "        # Contamos el numero de valores faltantes (NA) en la columna(\n",
-    "        num_faltantes = df_train[col].isna().sum()\n",
-    "        if num_faltantes/len(df_train) > umbral_col:\n",
-    "            df_train = df_train.drop(columns=[col])\n",
-    "            df_val = df_val.drop(columns=[col])\n",
-    "\n",
-    "    # Imputacion de valores: mediana para cada nulo de cada columna\n",
-    "    for col in cols_diana:\n",
-    "        med = df_train[col].median()\n",
-    "        df_train[col] = df_train[col].fillna(med)\n",
-    "        df_val[col] = df_val[col].fillna(med)\n",
-    "\n",
-    "    return df_train, df_val\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "19d17c98",
-   "metadata": {},
-   "source": [
-    "#### Normalización y selección de características"
+    "df_vino = df_vino[df_vino['num atipicos'] < 4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "be145b9c",
+   "execution_count": 15,
+   "id": "6f2617e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,25 +250,26 @@
     "    columnas = train_df.drop(columns=[target]).select_dtypes(include=\"number\").columns\n",
     "\n",
     "    scaler = StandardScaler()\n",
+    "    train_df_scaled = train_df.copy()\n",
+    "    test_df_scaled = test_df.copy()\n",
     "\n",
+    "    train_df_scaled[columnas] = scaler.fit_transform(train_df[columnas])\n",
+    "    test_df_scaled[columnas] = scaler.transform(test_df[columnas])\n",
     "\n",
-    "    train_df[columnas] = scaler.fit_transform(train_df[columnas])\n",
-    "    test_df[columnas] = scaler.transform(test_df[columnas])\n",
-    "\n",
-    "    return train_df, test_df\n"
+    "    return train_df_scaled, test_df_scaled\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "bd31d392",
+   "execution_count": 13,
+   "id": "a4136063",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Selección de características con SelectKBest\n",
+    "# Selección de características con SelectKBest y correlación\n",
     "from sklearn.feature_selection import SelectKBest, f_regression\n",
     "\n",
-    "def seleccion_caracteristicas(df, k, target='calidad'):\n",
+    "def seleccion_kbest(df, k, target='calidad'):\n",
     "    X = df.drop(columns=[target])\n",
     "    y = df[target]\n",
     "\n",
@@ -266,56 +279,37 @@
     "    selected_features = X.columns[selector.get_support()]\n",
     "\n",
     "    df_fs = df[selected_features.tolist() + [target]]\n",
-    "    return df_fs\n"
+    "    return df_fs\n",
+    "\n",
+    "def seleccion_correlacion(df, n, target='calidad'):\n",
+    "    corr = df.corr(numeric_only=True)[target].abs().sort_values(ascending=False)\n",
+    "    selected_features = corr.index[1:n+1]\n",
+    "    return df[selected_features.tolist() + [target]]\n",
+    "\n",
+    "def seleccion_caracteristicas(df, n, funcion, target='calidad'):\n",
+    "    if funcion == 'kbest':\n",
+    "        return seleccion_kbest(df, n, target)\n",
+    "    elif funcion == 'correlacion':\n",
+    "        return seleccion_correlacion(df, n, target)\n",
+    "    else:\n",
+    "        raise ValueError(\"Función de selección no válida. Use 'kbest' o 'correlacion'.\")\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9b5187dd",
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ffa9594d",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Función que empaqueta el preprocesado"
+    "def preprocesado(df_train, df_valid, target='calidad'):\n",
+    "    return 0, 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f4a658d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocesado(train_df_pre, valid_df_pre, target='calidad'):\n",
-    "    df_train = train_df_pre.copy()\n",
-    "    df_val = valid_df_pre.copy()\n",
-    "    cols_diana = [c for c in train_df_pre.columns if c not in [target]]\n",
-    "    \n",
-    "    # Detección de atípicos en train y valid\n",
-    "    df_train, df_val = detectar_atipicos(df_train, df_val, cols_diana)\n",
-    "\n",
-    "    # Tratamiento de atípicos: eliminación o imputación\n",
-    "    df_train, df_val = eliminar_o_imputacion(df_train, df_val, cols_diana)\n",
-    "\n",
-    "    # Normalización de los datos\n",
-    "    df_train, df_val = estandarizar_train_test(df_train, df_val, target)\n",
-    "\n",
-    "    # Selección de características con SelectKBest\n",
-    "    df_train = seleccion_caracteristicas(df_train, k=10, target=target)\n",
-    "    df_val = df_val[df_train.columns]\n",
-    "    return df_train, df_val \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "898266ff",
-   "metadata": {},
-   "source": [
-    "## Entrenamiento del modelo de predicción"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "2fead309",
+   "id": "b3ed3963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e32b050a",
+   "id": "21fcf48e",
    "metadata": {},
    "outputs": [],
    "source": []
