Engadida función de árbore de decisión

--- a/p01/script.ipynb
+++ b/p01/script.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "3b5f96fb",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "9f3f78ba",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "35d8d492",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "02d19cb0",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "be145b9c",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "bd31d392",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "8f4a658d",
    "metadata": {},
    "outputs": [],
@@ -248,6 +248,35 @@
    "metadata": {},
    "source": [
     "## Entrenamiento del modelo de predicción"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2563444f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "def arbore_decision(df_train, max_depth, min_samples_split, min_samples_leaf, target='calidad',):\n",
+    "    \n",
+    "    # Separar características (X) e etiqueta (y)\n",
+    "    X_train = df_train.drop(columns=[target])\n",
+    "    y_train = df_train[target]\n",
+    "    \n",
+    "    # Inicializar o modelo cos parámetros recibidos\n",
+    "    modelo = DecisionTreeClassifier(\n",
+    "        max_depth = max_depth,\n",
+    "        min_samples_split = min_samples_split,\n",
+    "        min_samples_leaf = min_samples_leaf,\n",
+    "        random_state = 42  # Para asegurar resultados reproducibles\n",
+    "    )\n",
+    "    \n",
+    "    # Entrenar el modelo\n",
+    "    modelo.fit(X_train, y_train)\n",
+    "    \n",
+    "    return modelo"
    ]
   },
   {
@@ -330,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "e32b050a",
    "metadata": {},
    "outputs": [
@@ -350,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "77a25348",
    "metadata": {},
    "outputs": [
@@ -945,7 +974,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.12"
   }
  },
  "nbformat": 4,
